--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             <p id="title_top" style="font-family: 'Girassol', sans-serif; font-style: sans-serif; font-size: 5vh; text-align: center; color: #000000;">Medic Archiv</p>
             <div class="wrapper">
             <div class="sidebar">
-                <img src="badges/police.png">
+                <img src="badges/medic.png">
                 <h2></h2>
                 <ul>
                     <li v-on:click="changePage('Home')" id="home">Start</li>
